--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1> welcome to my first web page</h1>   
   <h2 align ="center"> welcome </h2>   
   <HR SIZE =4 WIDTH="50%" >
-  <pre align ="right">
+  <pre align ="center">
     this is   my first   web page
   </pre>
   <p align ="justify">
