--- a/index.html
+++ b/index.html
@@ -10,15 +10,26 @@
 <body>
   <h1> welcome to my first web page</h1>   
   <h2 align ="center"> welcome </h2>   
-  <HR SIZE =4 WIDTH="50%" >
-  <pre align ="center">
+  <HR SIZE =4 WIDTH="50%" noshade>
+  <br/>
+  
+  <blockquote>
+    Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
+  </blockquote>
+  
+  <q>
+    Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
+  </q>
+  <div style="border: 1px solid goldenrod;">
+   <pre align ="center">
     this is   my first   web page
-  </pre>
-  <p align ="justify">
-    this is   my first   web page
-  </p>
+   </pre>
+   <p align ="justify">
+    welcome to this site
+   </p>
+  </div>
   <p align ="left">
-    this is   my first   web page
+    so here we go........
   </p>
   
 </body>
