--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </title>
 </head> 
 <body>
-  <h1> welcome to my first web page</h1>   
+  <h1> welcome to web page</h1>   
   <h2 align ="center"> welcome </h2>   
   <HR SIZE =4 WIDTH="50%" noshade>
   <br/>
@@ -20,6 +20,7 @@
   <q>
     Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
   </q>
+
   <div style="border: 1px solid goldenrod;">
    <pre align ="center">
     this is   my first   web page
@@ -31,6 +32,7 @@
   <p align ="left">
     so here we go........
   </p>
+
   <div style="border: 1px"   >
     ayushi
   </div>
